--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,8 @@
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  height: 800px;
-  font-size: 10px;
+  height: 100%;
+  font-size: 8px;
   font-weight: BOLD;
 }
 
@@ -61,5 +61,35 @@ mat-form-field {
   flex-wrap: wrap;
   flex-direction: column;
   width: 40%;
-  margin: 1rem 0.5rem;
+  margin: 0.5rem 0.2rem;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.fighter {
+  margin-left: 1rem;
+}
+
+.style {
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  mat-form-field {
+    width: 45%;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+mat-form-field {
+  margin-bottom: -1.25em;
+}
+
+.button {
+  margin: 0 8rem;
+  padding: 0;
 }
